@@ -24,6 +24,7 @@
 - updated isMatch/hasMatch/matched to use the new context meta
   data feature to keep tracker of matchers (the old way was not
   thread safe)
+- for loop initialization and increment terms can now be empty
 
 2.0-release
 ===========
